# r2d2-sqlite

./: .gitignore  .travis.yml  Cargo.toml  Changelog.md  LICENSE  README.md  file.db  rustfmt.toml  search-index.js  update-docs.sh
.github/: dependabot.yml
.github/workflows/: rust.yml
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/r2d2/: trait.ManageConnection.js
implementors/std/error/: trait.Error.js
r2d2_sqlite/: enum.Error.html  index.html  sidebar-items.js  struct.SqliteConnectionManager.html
src/: lib.rs
src/r2d2_sqlite/src/: lib.rs.html
tests/: test.rs
