[package]
name = "r2d2_sqlite"
version = "0.16.0"
authors = ["Jovansonlee Cesar<ivanceras@gmail.com>"]
license = "MIT"
description = "Sqlite support for the r2d2 connection pool"
repository = "https://github.com/ivanceras/r2d2-sqlite"
documentation = "https://docs.rs/r2d2_sqlite/"
keywords = ["sqlite", "r2d2", "pool"]
edition = "2018"

[lib]
name = "r2d2_sqlite"
path = "src/lib.rs"
test = false

[[test]]
name = "test"
path = "tests/test.rs"

[dependencies]
r2d2 = "0.8"
rusqlite = "0.23"

[dev-dependencies]
tempdir = "0.3"

[dev-dependencies.rusqlite]
version = "0.23"
features = ["trace"]
