[package]
name = "r2d2_sqlite"
version = "0.18.0"
authors = ["Jovansonlee Cesar<ivanceras@gmail.com>", "Hugo Woesthuis <hugo@woesthuis.eu>"]
license = "MIT"
description = "Sqlite support for the r2d2 connection pool"
repository = "https://github.com/ivanceras/r2d2-sqlite"
documentation = "https://docs.rs/r2d2_sqlite/"
keywords = ["sqlite", "r2d2", "pool"]
edition = "2018"

[lib]
name = "r2d2_sqlite"
path = "src/lib.rs"
test = false

[features]
bundled = [ "rusqlite/bundled" ]

[[test]]
name = "test"
path = "tests/test.rs"



[dependencies]
r2d2 = "0.8"

[dependencies.rusqlite]
version = "0.26"

[dev-dependencies]
tempdir = "0.3"

[dev-dependencies.rusqlite]
version = "0.26"
features = ["trace"]


[features]
bundled-sqlcipher = ["rusqlite/bundled-sqlcipher"]